# HT2ML

./: CMakeLists.txt  README.md  build-lib.sh  fosdsc.edl
CNN_benchmark/: README.md
CNN_benchmark/CompareToE2DM/enclave/: ld
CNN_benchmark/CompareToE2DM/host/: LoadData.cpp  LoadData.h  host.cpp
CNN_benchmark/CompareToE2DM/host/data/: DatasetOperations.cpp  DatasetOperations.h
CNN_benchmark/CompareToHCNN/: CMakeLists.txt
CNN_benchmark/CompareToHCNN/host/: LoadData.cpp  LoadData.h  host.cpp
CNN_benchmark/CompareToHE/: fosdsc.edl
CNN_benchmark/CompareToHE/enclave/: dispatcher.h  ld
CNN_benchmark/CompareToHE/host/: LoadData.cpp
CNN_benchmark/CompareToHybrid/enclave/: CMakeLists.txt  ecalls.cpp
CNN_benchmark/CompareToICDCS/enclave/: dispatcher.cpp
CNN_benchmark/CompareToOblivious/NonObliviousHETEE/enclave/: ecalls.cpp  ld
CNN_benchmark/CompareToOblivious/NonObliviousHETEE/host/: host.cpp
CNN_benchmark/CompareToOblivious/NonObliviousHybridCNN/host/: LoadData.cpp
CNN_benchmark/CompareToOblivious/ObliviousHETEE/: CMakeLists.txt
CNN_benchmark/CompareToOblivious/ObliviousHETEE/host/: LoadData.cpp
CNN_benchmark/CompareToOblivious/ObliviousHybridCNN/enclave/: dispatcher.h
CNN_benchmark/CompareToOblivious/ObliviousHybridCNN/enclave/include/: gmp.h
CNN_benchmark/CompareToOblivious/ObliviousHybridCNN/enclave/include/NTL/: ConfigLog.h
CNN_benchmark/E2DM_Non_Linear/host/: CKKSmatrix.h  LoadData.h  host.cpp
CNN_benchmark/NonLinearE2DM/host/: CKKSmatrix.cpp  LoadData.cpp  LoadData.h  host.cpp
CNN_benchmark/NonLinearE2DM/host/data/: DatasetOperations.cpp  DatasetOperations.h
CNN_benchmark/NonObliviousHybridCNN/: README.md
CNN_benchmark/NonObliviousHybridCNN/enclave/: CMakeLists.txt
CNN_benchmark/NonObliviousHybridCNN/host/: host.cpp
CompareToHE/enclave/: ecalls.cpp
CompareToHE/host/: host.cpp
CompareToHE/host/data/: DatasetOperations.h
CompareToHybrid/: fosdsc.edl
CompareToHybrid/enclave/: dispatcher.cpp  dispatcher.h  ecalls.cpp
CompareToHybrid/host/: LoadData.cpp  host.cpp
CompareToHybrid/host/data/: DatasetOperations.cpp
CompareToICDCS/: CMakeLists.txt
CompareToICDCS/enclave/: dispatcher.h
CompareToICDCS/host/include/helib/: version.h
HEMatMultTest/: BGVmatrix.cpp  BGVmatrix.h  BGVmatrix_test.cpp  BGVmatrix_test.h  Bootstrapping_params.cpp  Bootstrapping_params.h  CKKSmatrix.h  CKKSmatrix_test.cpp  CKKSmatrix_test.h  README.md  main.cpp
HETEE_Result_Log/LR_HE_only_baseline_log/: test.cpp_b
LR_benchmark/EHPPML_ours/enclave/: dispatcher.cpp  dispatcher.h  ecalls.cpp
LR_benchmark/EHPPML_ours/host/: LoadData.cpp  LoadData.h  hematrix.cpp  hematrix.h  host.cpp
LR_benchmark/HETEE_LR/: CMakeLists.txt  README.md  fosdsc.edl
LR_benchmark/HETEE_LR/enclave/: dispatcher.cpp  dispatcher.h  ecalls.cpp
LR_benchmark/HETEE_LR/host/: CMakeLists.txt  LoadData.cpp  LoadData.h  hematrix.cpp  hematrix.h  host.cpp
LR_benchmark/HETEE_LR/log/: displayMat  dynamicArray_backup
LR_benchmark/HE_only_baseline/: Makefile  PtMatrix.cpp  PtMatrix.h  README.md  Regression.cpp  Regression.h  Test_Regression.cpp  Test_Regression.h  main.cpp
LR_benchmark/HE_only_baseline/log/: ParamSet.txt
LR_benchmark/MatInvTest/: hteva.edl
LR_benchmark/MatInvTest/enclave/: dispatcher.h  ecalls.cpp
LR_benchmark/MatInvUnitTest/: CMakeLists.txt  README.md
LR_benchmark/MatInvUnitTest/enclave/: CMakeLists.txt  dispatcher.cpp  dispatcher.h  hteva.conf  stubs.c
LR_benchmark/MatInvUnitTest/host/: CMakeLists.txt  host.cpp
LR_benchmark/scripts/: README.md  generateRandomData.py  test.py
NonObliviousHybridCNN/: fosdsc.edl
NonObliviousHybridCNN/enclave/: dispatcher.cpp  obl_Impl.cpp
NonObliviousHybridCNN/enclave/include/NTL/: config.h
NonObliviousHybridCNN/host/include/NTL/: ConfigLog.h
ObliviousHybridCNN/: CMakeLists.txt
ObliviousHybridCNN/enclave/: CMakeLists.txt  dispatcher.cpp
ObliviousHybridCNN/enclave/include/obl/: obl_primitives.h
ObliviousHybridCNN/host/: CMakeLists.txt  LoadData.h
ObliviousHybridCNN/host/include/: gmp.h
OrAndOpHE_MatTest/: main.cpp
enclave/: CMakeLists.txt  dispatcher.cpp  dispatcher.h  ecalls.cpp  fosdsc.conf  ld
host/: CMakeLists.txt  LoadData.cpp  LoadData.h  host.cpp
host/utils/: LoadData.cpp  LoadData.h  MatOpe.cpp  MatOpe.h
